# tripay-sdk

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  python-publish.yml
test/: test.py
tripayclient/: tripay.py
tripayclient/core/: auth.py  calculator.py  closed_transactions.py  exceptions.py  instructions.py  open_transactions.py  transactions.py
tripayclient/schemas/: channel_enum.py
