[tool.poetry]
name = "tripay-sdk"
version = "0.1.0"
description = "Unofficial SDK for Tripay payment gateway"
authors = ["adriyansyahmf <adriyansyahmf0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "22.1.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
